Update badge and title for Engineer Manager

--- a/index.html
+++ b/index.html
@@ -191,14 +191,14 @@
 
         <div class="split-branch">
             <div class="node node-l4">
-                <div class="badge">IC Track</div>
+                <div class="badge">Expert Track</div>
                 <h2>Lead Engineer</h2>
                 <p>Architecting Complexity</p>
             </div>
 
             <div class="node node-l4">
-                <div class="badge">Mgt Track</div>
-                <h2>Eng. Manager</h2>
+                <div class="badge">Management Track</div>
+                <h2>Engineer Manager</h2>
                 <p>Cultivating Excellence</p>
             </div>
         </div>
